--- a/mercado/users/templates/users/signup.html
+++ b/mercado/users/templates/users/signup.html
@@ -1,5 +1,6 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +8,7 @@
     <title>Registrarme - Michi Mercado</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <style>
         .social-login {
@@ -17,10 +19,32 @@
         .social-login .btn {
             flex: 1;
         }
+        :root {
+            --bg-image-url: url('/static/images/cat_paw_background_light.svg');
+        }
+
+        html[data-bs-theme="dark"] {
+            --bg-image-url: url('/static/images/cat_paw_background_dark.svg');
+        }
+        body {
+            color: var(--bs-body-color);
+            background-color: var(--bs-body-bg);
+            background-image: var(--bg-image-url);
+            background-size: 200px 200px;
+            background-repeat: repeat;
+            background-position: center center;
+            background-attachment: scroll;
+            transition: background-color 0.25s ease, color 0.25s ease;
+        }
     </style>
 </head>
 
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
+    <div style="position: fixed; top: 20px; right: 1px; z-index: 1000; width: 60px; height: 60px; font-size: 20px;">
+        <button id="theme-toggle" class="btn btn-outline-secondary btn-sm">
+            <i class="fas fa-moon" id="theme-icon"></i>
+        </button>
+    </div>
     <main class="form-signin w-100 m-auto" style="max-width: 400px;">
         <div class="card shadow-lg">
             <div class="card-body p-4">
@@ -77,6 +101,8 @@
         </div>
         </div>
     </main>
+    {% block extra_js %}
+        <script src="{% static 'js/theme.js' %}"></script>
+    {% endblock %}
 </body>
-
 </html>
