--- a/mercado/products/templates/products/my_products.html
+++ b/mercado/products/templates/products/my_products.html
@@ -153,7 +153,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-              <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+              <button type="submit" id="submit-button" onclick="this.disabled=true; this.innerText='Guardando...'; this.form.submit();"  class="btn btn-primary">Guardar Cambios</button>
             </div>
           </form>
         </div>
