--- a/mercado/products/templates/products/my_products.html
+++ b/mercado/products/templates/products/my_products.html
@@ -106,7 +106,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="submit" class="btn btn-primary" onclick="this.disabled=true; this.innerText='Creando...'; this.form.submit();">Crear Producto</button>
+              <button type="submit" class="btn btn-primary">Crear Producto</button>
             </div>
           </form>
         </div>
